# pytest-docker-compose-v2

./: .gitignore  README.md  README.rst  pyproject.toml  tox.ini
.devcontainer/: Dockerfile  devcontainer.json  docker-init.sh
.github/workflows/: release.yaml  test.yaml
pytest_docker_compose/: plugin.py
tests/: conftest.py
tests/pytest_docker_compose_tests/: test_compose_files_fixture.py  test_function_scoping_fixtures.py  test_module_scoping_fixtures.py  test_multiple_compose_files.py  test_wrong_scoping.py
tests/pytest_docker_compose_tests/my_network/: docker-compose.yml  extra-service.yml
tests/pytest_docker_compose_tests/my_network/a_buildable_container/: Dockerfile  an_api.py  requirements.txt
