[project]
name = "pytest-docker-compose-v2"
version = "0.1.0"
description = "Manages Docker containers during your integration tests"
authors = [
    {name = "Radu Suciu"},
    {name = "Roald Storm"},
    {name = "Thomas Meckel"},
]
dependencies = [
    "pytest>=7.2.2,<8",
    "python-on-whales>=0.69.0,<1"
]
requires-python = ">=3.9"
readme = "README.rst"
license = {text = "Apache"}
keywords = [
    "pytest",
    "docker compose",
]
classifiers = [
  "Topic :: Software Development :: Testing",
  "Intended Audience :: Developers",
  "Development Status :: 4 - Beta",
  "Framework :: Pytest",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]

[project.entry-points.pytest11]
docker_compose = "pytest_docker_compose.plugin:plugin"

[project.urls]
repository="https://github.com/radusuciu/pytest-docker-compose-v2"

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.0.259",
    "bumpver>=2022.1120",
    "git-cliff>=2.0.4",
    "tox>=4.13.0",
    "psycopg2-binary>=2.9.9",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.1",
]

[tool.pytest.ini_options]
addopts = "-m 'not (should_fail or multiple_compose_files)' '--docker-compose' './tests/pytest_docker_compose_tests/my_network' '--docker-compose-no-build'"
markers = [
    "should_fail: marks a set of test that should throw an error when run",
    "multiple_compose_files: marks a test that uses more than one compose file",
]
minversion = "7.2"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.git-cliff.changelog]
# changelog header
header = """
# Changelog\n
All notable changes to this project will be documented in this file.
The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).\n
"""
# template for the changelog body
# https://tera.netlify.app/docs/#introduction
body = """
{% if version %}\
    ## [{{ version | trim_start_matches(pat="v") }}] - {{ timestamp | date(format="%Y-%m-%d") }}
{% else %}\
    ## [Unreleased]
{% endif %}\
{% for group, commits in commits | group_by(attribute="group") %}
    ### {{ group | upper_first }}
    {% for commit in commits %}
        - {{ commit.message | upper_first }}\
    {% endfor %}
{% endfor %}\n
"""
# remove the leading and trailing whitespace from the template
trim = true
# changelog footer
footer = """
<!-- generated by git-cliff -->
"""

[tool.git-cliff.git]
# parse the commits based on https://www.conventionalcommits.org
conventional_commits = true
# filter out the commits that are not conventional
filter_unconventional = true
# process each line of a commit as an individual commit
split_commits = false
# regex for parsing and grouping commits
commit_parsers = [
    { message = "^.*: add", group = "Added"},
    { message = "^.*: support", group = "Added"},
    { message = "^.*: remove", group = "Removed"},
    { message = "^.*: delete", group = "Removed"},
    { message = "^test", group = "Fixed"},
    { message = "^fix", group = "Fixed"},
    { message = "^.*: fix", group = "Fixed"},
    { message = "^.*", group = "Changed"},
]
# protect breaking changes from being skipped due to matching a skipping commit_parser
protect_breaking_commits = false
# filter out the commits that are not matched by commit parsers
filter_commits = true
# glob pattern for matching git tags
tag_pattern = "[0-9]*"
# regex for skipping tags
# skip_tags = "v0.1.0-beta.1"
# regex for ignoring tags
ignore_tags = ""
# sort the tags topologically
topo_order = false
# sort the commits inside sections by oldest/newest order
sort_commits = "oldest"

[tool.bumpver]
current_version = "0.1.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
